2005/02/06 Matt Zimmerman <zubov@users.sourceforge.net>
* I dare you to get "the SSL bug" again, http://sourceforge.net/tracker/index.php?func=detail&aid=997540&group_id=56385&atid=480372

2005/02/06 Jamal James <teflon114@gmail.com>
* Updated to new Blowfish class provided by k2r

2005/02/05 Morgan Christiansson <drftpd@mog.se>
* Made UserManagerConverter convert lastReset so that users aren't
  reset when imported.

2005/02/03 Morgan Christiansson <drftpd@mog.se>
* Moved slaveselection to it's own source folder for use with the
  DelegatingSlaveSelectionManager.
* Fixed a bunch of minor problems reported by CyBeR.

2005/01/31 Morgan Christiansson <drftpd@mog.se>
* Fixed free credits problem with deleted directories, thanks to VST.

2005/01/25 Jamal James <teflon114@gmail.com>
* Added Blowfish support to SiteBot. w00t
  Much thanks to the fine folks over at http://mircryption.sourceforge.net/
  for providing the java blowfish code
  SiteBot tested with FiSH mIRC addon (http://fish.sekure.us/) and assumed
  to work with mircryption as the code was provided by them.

2005/01/18 Morgan Christiansson <drftpd@mog.se>
* Fixed dynamic user data inconsitencies,
  slots should be converted now.

2005/01/09 Jamal James <teflon114@gmail.com>
* Added getUserByIdent() to UserManager
* Added !approve irc plugin to net.drmods.plugins.irc
* Added !credits irc plugin to net.drmods.plugins.irc
* Moved !kick irc plugin to net.drmods.plugins.irc
* Added irc.chanprefix and irc.msgprefix to irc.conf
   msgprefix is for msg commands i.e. !invite & !ident
   chanprefix is for the public commands
   commands added to generictextoutput.conf do no use this trigger.
* Changed !help response to private msg only

2005/01/05 Morgan Christiansson <drftpd@mog.se>
* Fixed bug in KeyedMap that allowed duplicate keys to be added.

2005/01/04 Jamal James <teflon114@gmail.com>
* Added getCommandsHelp() to all irc plugins which will be msg'd to user on !help
